--- a/index.html
+++ b/index.html
@@ -9,178 +9,304 @@
   <link rel="stylesheet" href="style.css" />
 
   <style>
-    html, body { margin:0; padding:0; height:100%; overflow:hidden; }
+    html, body { margin:0; padding:0; height:100%; overflow:hidden; font-family: Arial, sans-serif; }
+
+    .btn-yellow{
+      padding:22px 36px; font-size:22px; font-weight:700;
+      border-radius:14px; background:#facc15; color:#1e3a8a;
+      border:none; cursor:pointer; box-shadow:0 6px 15px rgba(0,0,0,0.35);
+    }
+    .btn-white{
+      padding:22px 36px; font-size:22px; font-weight:700;
+      border-radius:14px; background:#ffffff; color:#1e3a8a;
+      border:none; cursor:pointer; box-shadow:0 6px 15px rgba(0,0,0,0.25);
+    }
+
+    /* ✅ centered blue screens */
+    .screen-blue{
+      text-align:center;
+      min-height:100vh;
+      padding:24px 16px;
+      background:#1e3a8a;
+      color:white;
+
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      flex-direction:column;
+
+      overflow:hidden;
+    }
+
+    .grid-wrap{
+      display:flex; flex-wrap:wrap; gap:14px; justify-content:center;
+      width:min(760px, 95%);
+    }
+    .pill{
+      padding:14px 18px; font-size:18px; font-weight:800;
+      border-radius:14px; background:#facc15; color:#1e3a8a;
+      border:none; cursor:pointer;
+    }
+    .input-wide{
+      width:min(520px, 90%);
+      padding:16px 14px; font-size:18px;
+      border-radius:12px; border:none; outline:none;
+      margin-bottom:22px;
+    }
+
+    .subline{ margin-top:-6px; font-size:16px; }
+    .muted{ opacity:0.9; }
+
+    /* Judging template rows */
+    .score-row{ margin: 14px 0; }
+    .score-row label{ display:block; font-weight:800; margin-bottom:6px; }
+    .score-help{ font-size:13px; opacity:0.8; margin-top:-6px; margin-bottom:6px; }
+    .score-line{ display:flex; align-items:center; gap:10px; }
+    .score-line input[type="range"]{ width:100%; }
+    .score-badge{
+      min-width:44px; text-align:center; font-weight:900;
+      padding:6px 10px; border-radius:10px;
+      background:#e5e7eb; color:#111827;
+    }
+
+    textarea{ width:100%; padding:12px; border-radius:12px; border:1px solid #d1d5db; }
+    select{ padding:12px; border-radius:12px; border:1px solid #d1d5db; width:100%; }
+
+    .dq-box{
+      margin-top:14px;
+      padding:12px;
+      border-radius:14px;
+      border:1px solid #e5e7eb;
+      background:#f9fafb;
+    }
+
+    .danger{
+      background:#dc2626; color:white; border:none;
+      padding:12px 16px; border-radius:12px; font-weight:800;
+      cursor:pointer;
+    }
+
+    .card{ background:white; border-radius:16px; padding:16px; box-shadow:0 8px 20px rgba(0,0,0,0.08); }
+    label{ font-weight:800; display:block; margin-top:10px; margin-bottom:6px; }
+    input[type="text"]{ width:100%; padding:12px; border-radius:12px; border:1px solid #d1d5db; }
+    button{ margin-top:10px; margin-right:8px; }
   </style>
 </head>
 
 <body>
 
-  <!-- HOME / INTRO -->
-  <div id="introScreen" class="screen screen-blue">
-    <div class="centerWrap">
-      <h1 class="title">Orpington Show Judging</h1>
-      <img src="orpington.png" alt="Orpington" class="heroImg">
-      <button class="btn btn-primary" onclick="goShow()">Start Judging</button>
-      <button class="btn btn-neutral" onclick="unlockJudge()">Change Show / Judge</button>
+  <!-- ✅ INTRO SCREEN -->
+  <div id="introScreen" class="screen-blue" style="display:flex;">
+    <h1 style="font-size:42px; font-weight:800; margin-bottom:18px;">Orpington Show Judging</h1>
+
+    <img src="orpington.png" alt="Orpington"
+      style="max-width:72%; border-radius:18px; margin:18px 0 26px; box-shadow:0 10px 25px rgba(0,0,0,0.4);" />
+
+    <button class="btn-yellow" onclick="startApp()">Start Judging</button>
+  </div>
+
+  <!-- ✅ SHOW SCREEN -->
+  <div id="showScreen" class="screen-blue" style="display:none;">
+    <h1 style="font-size:34px; font-weight:800; margin-bottom:18px;">Select Show</h1>
+
+    <select id="showSelect" class="input-wide">
+      <option value="">-- Choose a show --</option>
+      <option value="AvioMed Young Chicken Show 2026">AvioMed Young Chicken Show 2026</option>
+      <option value="AvioMed Nationals 2026">AvioMed Nationals 2026</option>
+      <option value="AvioMed Orpington Show 2026">AvioMed Orpington Show 2026</option>
+    </select>
+
+    <button class="btn-yellow" onclick="saveShowAndContinue()">Next</button>
+  </div>
+
+  <!-- ✅ JUDGE SCREEN -->
+  <div id="judgeScreen" class="screen-blue" style="display:none;">
+    <h1 style="font-size:34px; font-weight:800; margin-bottom:18px;">Judge Name</h1>
+
+    <input id="judgeName" class="input-wide" type="text" placeholder="Enter judge name" />
+
+    <button class="btn-yellow" onclick="saveJudgeAndContinue()">Next</button>
+  </div>
+
+  <!-- ✅ CLASS SCREEN (auto-next on tap) -->
+  <div id="classScreen" class="screen-blue" style="display:none;">
+    <h1 style="font-size:34px; font-weight:800; margin-bottom:18px;">Select Class</h1>
+
+    <div class="grid-wrap">
+      <button class="pill" onclick="selectClass('PULLET')">Pullet</button>
+      <button class="pill" onclick="selectClass('COCKEREL')">Cockerel</button>
+      <button class="pill" onclick="selectClass('HEN')">Hen</button>
+      <button class="pill" onclick="selectClass('COCK')">Cock</button>
+    </div>
+
+    <p style="margin-top:18px; font-size:18px;">
+      Selected: <strong><span id="classSelectedDisplay">None</span></strong>
+    </p>
+    <!-- ❌ no Next button here -->
+  </div>
+
+  <!-- ✅ COLOUR SCREEN -->
+ <!-- ✅ COLOUR SCREEN (fixed scrolling) -->
+<div id="colourScreen"
+     style="
+       display:none;
+       height:100vh;
+       background:#1e3a8a;
+       color:white;
+       padding:22px 16px 16px;
+       box-sizing:border-box;
+
+       display:flex;
+       flex-direction:column;
+       align-items:center;
+       justify-content:flex-start;
+       overflow:hidden;
+     ">
+
+  <h1 style="font-size:34px; font-weight:800; margin:0 0 10px;">Select Colour</h1>
+
+  <p style="margin:0 0 14px; font-size:16px; opacity:0.9;">
+    Selected: <strong><span id="colourSelectedDisplay">None</span></strong>
+  </p>
+
+  <!-- ✅ This is the scroll box -->
+  <div
+    id="colourScrollBox"
+    style="
+      width:min(760px, 95%);
+      flex:1;
+      min-height:0;
+      overflow-y:auto;
+      -webkit-overflow-scrolling: touch;
+      padding:10px;
+      border-radius:14px;
+      background: rgba(255,255,255,0.08);
+      box-shadow: inset 0 0 0 1px rgba(255,255,255,0.18);
+    "
+  >
+    <div class="grid-wrap" style="width:100%;">
+      <button class="pill" onclick="selectColour('BLACK')">Black</button>
+      <button class="pill" onclick="selectColour('BLUE')">Blue</button>
+      <button class="pill" onclick="selectColour('BUFF')">Buff</button>
+      <button class="pill" onclick="selectColour('WHITE')">White</button>
+      <button class="pill" onclick="selectColour('SPLASH')">Splash</button>
+      <button class="pill" onclick="selectColour('CHOCOLATE')">Chocolate</button>
+      <button class="pill" onclick="selectColour('LAVENDER')">Lavender</button>
+      <button class="pill" onclick="selectColour('JUBILEE')">Jubilee</button>
+
+      <button class="pill" onclick="selectColour('CUCKOO')">Cuckoo</button>
+      <button class="pill" onclick="selectColour('PARTRIDGE')">Partridge</button>
+      <button class="pill" onclick="selectColour('SILVER_LACED')">Silver Laced</button>
+      <button class="pill" onclick="selectColour('GOLD_LACED')">Gold Laced</button>
+
+      <button class="pill" onclick="selectColour('RED')">Red</button>
+      <button class="pill" onclick="selectColour('ISABEL')">Isabel</button>
+      <button class="pill" onclick="selectColour('CRELE')">Crele</button>
     </div>
   </div>
 
-  <!-- SHOW SCREEN -->
-  <div id="showScreen" class="screen screen-blue" style="display:none;">
-    <div class="centerWrap">
-      <h1 class="titleSmall">Select Show</h1>
-
-      <select id="showSelect" class="select">
-        <option value="">-- Choose a show --</option>
-        <option value="AvioMed Young Chicken Show 2026">AvioMed Young Chicken Show 2026</option>
-        <option value="AvioMed Nationals 2026">AvioMed Nationals 2026</option>
-        <option value="AvioMed Orpington Show 2026">AvioMed Orpington Show 2026</option>
-      </select>
-
-      <button class="btn btn-primary" onclick="saveShowAndContinue()">Next</button>
-      <button class="btn btn-back" onclick="goHome()">Back</button>
-    </div>
+  <!-- Backup Next button -->
+  <div style="width:min(760px, 95%); margin-top:14px;">
+    <button class="btn-yellow" onclick="saveColourAndContinue()" style="width: min(520px, 90%);">
+      Next
+    </button>
   </div>
+</div>
 
-  <!-- JUDGE NAME SCREEN -->
-  <div id="judgeScreen" class="screen screen-blue" style="display:none;">
-    <div class="centerWrap">
-      <h1 class="titleSmall">Judge Name</h1>
-      <input id="judgeName" class="textInput" placeholder="Enter judge name" />
-      <button class="btn btn-primary" onclick="saveJudgeAndContinue()">Next</button>
-      <button class="btn btn-back" onclick="goShow()">Back</button>
-    </div>
-  </div>
+  <!-- ✅ JUDGING SCREEN -->
+  <div id="judgingScreen" style="display:none; height:100vh; overflow:auto; padding:20px; background:#eef2ff;">
+    <h1>🐔 Orpington Judging</h1>
 
-  <!-- CLASS SCREEN -->
-  <div id="classScreen" class="screen screen-blue" style="display:none;">
-    <div class="centerWrap">
-      <h1 class="titleSmall">Select Class</h1>
-
-      <div class="grid2">
-        <button class="btn btn-neutral" onclick="pickClass('COCKEREL')">Cockerel</button>
-        <button class="btn btn-neutral" onclick="pickClass('PULLET')">Pullet</button>
-        <button class="btn btn-neutral" onclick="pickClass('COCK')">Cock</button>
-        <button class="btn btn-neutral" onclick="pickClass('HEN')">Hen</button>
-      </div>
-
-      <button class="btn btn-back" onclick="goJudge()">Back</button>
-    </div>
-  </div>
-
-  <!-- COLOUR SCREEN -->
-  <div id="colourScreen" class="screen screen-blue" style="display:none;">
-    <div class="centerWrap">
-      <h1 class="titleSmall">Select Colour</h1>
-
-      <div id="colourList" class="scrollList"></div>
-
-      <button class="btn btn-back" onclick="goClass()">Back</button>
-    </div>
-  </div>
-
-  <!-- JUDGING SCREEN -->
-  <div id="judgingScreen" class="screen screen-dark" style="display:none; overflow:auto;">
-    <div class="topBar">
-      <div>
-        <div class="metaLine">Show: <strong><span id="showNameDisplay">-</span></strong></div>
-        <div class="metaLine">Judge: <strong><span id="judgeNameDisplay">-</span></strong></div>
-        <div class="metaLine">Class: <strong><span id="classDisplay">-</span></strong> • Colour: <strong><span id="colourDisplay">-</span></strong></div>
-      </div>
-      <button class="btnSmall btn-back" onclick="goColour()">Change Colour</button>
-    </div>
+    <p class="subline">Show: <strong><span id="showNameDisplay">Not selected</span></strong></p>
+    <p class="subline">Judge: <strong><span id="judgeNameDisplay">Not selected</span></strong></p>
+    <p class="subline">Class: <strong><span id="classNameDisplay">Not selected</span></strong></p>
+    <p class="subline">Colour: <strong><span id="colourNameDisplay">Not selected</span></strong></p>
 
     <div class="card">
+      <div style="display:flex; gap:10px; flex-wrap:wrap; margin-bottom:10px;">
+        <button type="button" onclick="backToClass()"
+          style="padding:12px 14px; border-radius:12px; border:none; background:#1e3a8a; color:#ffffff; font-weight:900; cursor:pointer;">
+          ← Change Class (Sex)
+        </button>
+
+        <button type="button" onclick="backToColour()"
+          style="padding:12px 14px; border-radius:12px; border:none; background:#0f766e; color:#ffffff; font-weight:900; cursor:pointer;">
+          ← Change Colour
+        </button>
+      </div>
+
       <label>Bird ID</label>
-      <input type="text" id="birdId" class="textInput" />
-
-      <div class="row2">
-        <button class="btn btn-danger" onclick="toggleDQ()">Disqualify</button>
-        <div id="dqStatus" class="dqPill">DQ: No</div>
-      </div>
-
-      <div id="dqPanel" style="display:none;">
-        <label>DQ Reason</label>
-        <select id="dqReason" class="select">
-          <option value="">-- Select reason --</option>
-          <option value="Wrong colour / variety">Wrong colour / variety</option>
-          <option value="Severe defect">Severe defect</option>
-          <option value="Poor condition / illness">Poor condition / illness</option>
-          <option value="Wrong class / sex">Wrong class / sex</option>
-          <option value="Other">Other</option>
-        </select>
-        <label>DQ Note</label>
-        <input id="dqNote" class="textInput" placeholder="Short note (optional)" />
-      </div>
-
-      <!-- Sliders with live values -->
-      <div class="sliderBlock">
-        <div class="sliderHead"><span>Head & Comb</span><span id="v_head" class="valPill">0</span></div>
-        <input type="range" min="0" max="20" id="head" value="0">
-      </div>
-
-      <div class="sliderBlock">
-        <div class="sliderHead"><span>Body & Type</span><span id="v_body" class="valPill">0</span></div>
-        <input type="range" min="0" max="30" id="body" value="0">
-      </div>
-
-      <div class="sliderBlock">
-        <div class="sliderHead"><span>Legs & Feet</span><span id="v_legs" class="valPill">0</span></div>
-        <input type="range" min="0" max="15" id="legs" value="0">
-      </div>
-
-      <div class="sliderBlock">
-        <div class="sliderHead"><span>Plumage Colour</span><span id="v_colour" class="valPill">0</span></div>
-        <input type="range" min="0" max="25" id="colour" value="0">
-      </div>
-
-      <div class="sliderBlock">
-        <div class="sliderHead"><span>Condition</span><span id="v_condition" class="valPill">0</span></div>
-        <input type="range" min="0" max="10" id="condition" value="0">
-      </div>
-
-      <h2 class="totalLine">Total: <span id="total">0</span></h2>
-
-      <label>Comment (optional)</label>
-      <input id="comment" class="textInput" placeholder="Quick note…" />
-
-      <button class="btn btn-save" onclick="saveBird()">Save Bird</button>
-      <button class="btn btn-results" onclick="openResultsMode('classColour')">View Results</button>
-
-      <div class="syncLine">
-        <span id="syncStatus">Status: Ready</span>
-        <button class="btnSmall btn-neutral" onclick="syncNow()">Sync Now</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- RESULTS SCREEN -->
-  <div id="resultsScreen" class="screen screen-dark" style="display:none; overflow:auto;">
-    <div class="topBar">
-      <div>
-        <div class="metaLine">Show: <strong><span id="resultsShowName">-</span></strong></div>
-        <div class="metaLine">All judges combined (from Google Sheet)</div>
-      </div>
-      <button class="btnSmall btn-back" onclick="backToJudging()">Back</button>
-    </div>
-
-    <div class="card">
-      <div class="grid2">
-        <button class="btn btn-results" onclick="openResultsMode('classColour')">Best in Class + Colour (Top 5)</button>
-        <button class="btn btn-neutral" onclick="openResultsMode('variety')">Best in Variety (Top 3)</button>
-        <button class="btn btn-save" onclick="openResultsMode('breed')">Best in Breed</button>
-        <button class="btn btn-neutral" onclick="syncNow()">Sync Now</button>
-      </div>
-
-      <div id="resultsContent" style="margin-top:14px;"></div>
+      <input type="text" id="birdId" />
 
       <div style="margin-top:14px;">
-        <button class="btn btn-danger" onclick="resetShowFlow()">New Show (Home)</button>
-        <button class="btn btn-neutral" onclick="exportCSV()">Export (This Device)</button>
+        <h2 style="margin-bottom:6px;">SA Scale of Points</h2>
+        <div id="templateName" class="muted" style="margin-bottom:10px;"></div>
+        <div id="scoringContainer"></div>
       </div>
+
+      <div class="dq-box">
+        <div style="display:flex; align-items:center; justify-content:space-between; gap:10px; flex-wrap:wrap;">
+          <label style="margin:0;">
+            <input type="checkbox" id="dqToggle" onchange="toggleDQ()" />
+            Disqualified
+          </label>
+
+          <button class="danger" type="button" onclick="quickDQ()">
+            DQ (Pick reason)
+          </button>
+        </div>
+
+        <div id="dqFields" style="display:none; margin-top:10px;">
+          <label>DQ Reason</label>
+          <select id="dqReason"></select>
+
+          <label style="margin-top:10px;">DQ Note (optional)</label>
+          <input type="text" id="dqNote" placeholder="Extra note (optional)" />
+        </div>
+      </div>
+
+      <label style="margin-top:14px;">Judge Comments</label>
+      <textarea id="commentBox" rows="3" placeholder="Optional comment..."></textarea>
+
+      <h2 style="margin-top:16px;">Total: <span id="total">0</span></h2>
+
+      <!-- ✅ Only these two buttons -->
+      <button onclick="saveBird()">Save Bird</button>
+      <button onclick="showResults()">View Results</button>
     </div>
   </div>
 
-  <script src="app.js?v=3000"></script>
+  <!-- ✅ RESULTS SCREEN -->
+  <div id="resultsScreen" style="display:none; height:100vh; overflow:auto; padding:20px; background:#ffffff;">
+    <h1>🏆 Results</h1>
+
+    <p class="subline">Show: <strong><span id="resultsShowName">-</span></strong></p>
+    <p class="subline">Judge: <strong><span id="resultsJudgeName">-</span></strong></p>
+    <p class="subline">Class: <strong><span id="resultsClassName">-</span></strong></p>
+
+    <div class="card">
+      <div style="display:flex; gap:10px; flex-wrap:wrap; margin-bottom:10px;">
+        <button type="button" onclick="backToJudgingFromResults()"
+          style="padding:12px 14px; border-radius:12px; border:1px solid #d1d5db; background:#fff; font-weight:800; cursor:pointer;">
+          ← Back to Judging
+        </button>
+
+        <button type="button" onclick="exportCSV()"
+          style="padding:12px 14px; border-radius:12px; border:1px solid #d1d5db; background:#fff; font-weight:800; cursor:pointer;">
+          Export Results
+        </button>
+
+        <button type="button" onclick="newShowHome()"
+          style="padding:12px 14px; border-radius:12px; background:#dc2626; color:white; border:none; font-weight:900; cursor:pointer;">
+          New Show (Home)
+        </button>
+      </div>
+
+      <div id="resultsPageContent"></div>
+    </div>
+  </div>
+
+  <!-- ✅ cache-bust -->
+  <script src="app.js?v=2000"></script>
 </body>
 </html>
